--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "red-tetris",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "The objective of this project is to develop a networked multiplayer tetris game from a stack of software exclusively Full Stack Javascript",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+	"server" : "npm run start --prefix server/",
+	"client" : "npm start --prefix client/",
+	"build" : "npm run build --prefix client/"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "ali zaynoune",
+  "license": "MIT"
 }
