--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
     "client": "npm start --prefix client/",
     "build": "npm run build --prefix client/"
   },
+  "rules": {
+    "react/react-in-jsx-scope": "off"
+  },
   "keywords": [],
   "author": "ali zaynoune",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-plugin-react-require": "^3.1.3"
+  },
+  "dependencies": {
+    "@ant-design/icons": "^4.7.0"
+  }
 }
