--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "^3.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
