--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+# .env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
@@ -122,7 +122,7 @@ node_modules/
 .env.development.local
 .env.test.local
 .env.production.local
-.env
+#.env
 
 npm-debug.log*
 yarn-debug.log*
