--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "coverage": "jest --coverage",
-    "start": "nodemon src/app.js  --trace-warnings",
+    "start": "nodemon src/index.js  --trace-warnings",
     "start-gendoc": "node srcs/swagger.js"
   },
   "repository": {
@@ -28,13 +28,12 @@
     "socket.io": "^4.4.1",
     "swagger-autogen": "^2.18.8",
     "swagger-ui-express": "^4.3.0"
-  }
-  ,
+  },
   "devDependencies": {
     "child_process": "^1.0.2",
     "jest": "^27.2.4",
     "jest-environment-node": "^27.2.5",
-    "puppeteer": "^10.4.0",
+    "puppeteer": "^13.1.3",
     "randomstring": "^1.2.1",
     "supertest": "^6.1.6"
   }
