try to connect socket at middleware
Signed-off-by: alizaynoune <zaynoune.ali@gmail.com>

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "coverage": "jest --coverage",
-    "start": "nodemon src/index.js  --trace-warnings",
+    "start": "nodemon src/app.js  --trace-warnings",
     "start-gendoc": "node srcs/swagger.js"
   },
   "repository": {
