fix socket && login && create room && close room
Signed-off-by: alizaynoune <zaynoune.ali@gmail.com>

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "server": "npm run start --prefix server/",
     "client": "npm start --prefix client/",
+    "socket": "npm start --prefix socket/",
     "build": "npm run build --prefix client/"
   },
   "rules": {
