--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-react-require": "^3.1.3"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0"
+    "@ant-design/icons": "^4.7.0",
+    "lodash": "^4.17.21"
   }
 }
