--- a/socket/package.json
+++ b/socket/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1"
   }
