--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 REACT_APP_NAME = Red Tetris
 REACT_APP_TEAME = Alzaynoune
 REACT_APP_URL = http://localhost:3000/
-REACT_APP_IO_ENDPOINT = http://localhost:5000/
+REACT_APP_IO_ENDPOINT = http://192.168.1.114:5000/
