--- a/socket/package.json
+++ b/socket/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon src/app.js  --trace-warnings"
+    "start": "nodemon --ignore ./test/ ./src/app.js  --trace-warnings"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +20,10 @@
   "devDependencies": {
     "jest": "^27.5.1",
     "socket.io-client": "^4.4.1"
+  },
+  "jest" :{
+    "collectCoverage": true,
+    "coverageReporters": ["html", "text-summary"],
+    "collectCoverageFrom": [ "src/**/*.js"]
   }
 }
