--- a/socket/package.json
+++ b/socket/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "start": "nodemon --ignore ./test/ ./src/app.js  --trace-warnings"
   },
   "keywords": [],
