test [rooms, auth, users]
Signed-off-by: alizaynoune <zaynoune.ali@gmail.com>

--- a/socket/package.json
+++ b/socket/package.json
@@ -27,10 +27,11 @@
     "collectCoverageFrom": [ "src/**/*.js"],
     "setupFilesAfterEnv": ["./test/config/jest.config.js"],
     "globals": {
-      "__test__" : "test2",
       "__io__": null,
       "__socketServer__": null,
-      "__socketClient__": null
+      "__socketClient__": null,
+      "__PORT__": 2022,
+      "__URL__": "http://localhost"
     }
   }
 }
