--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "jest-environment-node": "^27.2.5",
     "puppeteer": "^13.1.3",
     "randomstring": "^1.2.1",
+    "socket.io-client": "^4.4.1",
     "supertest": "^6.1.6"
   }
 }
